Version 1.5.1 - 19-02-11
- Fixed resend last TC
- Updated readme

---------------------------------
Version 1.5.0 - 19-02-08
- Fixed a regression bug 
- Added golden upload
- Added appli upload 

Version 1.4.0 - 
- Warning: in BD total frame length is in hex whereas data length is in decimal

Version 1.3.1 - 18-10-11
- Added hex upload without TC
-------------------------------

Version 1.3.0 - 18-09-13
- Added <ctrl> + R shortcut to resend last TC
- Added keyboard shortcuts frame to UI 
-------------------------------

Version 1.2.2 - 18-09-12
- Fixed BD
- Fixed updater
-------------------------------

Version 1.2.1
- Updated BD
-------------------------------

Version 1.2.0
- Added auto updater
-------------------------------

Version 1.1.0
- Added TC with configurable parameter(s)

-------------------------------
Version 1.0.0 
- First release