@@ -1,6 +1,7 @@
 Version 1.5.1 - 19-02-11
 - Fixed resend last TC
 - Updated readme
+- deleted delay inter char (unused)
 
 ---------------------------------
 Version 1.5.0 - 19-02-08
